<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="remove_button">remove button</string>
    <string name="add_button">add button</string>
    <string name="trash_button">trash_button</string>
    <string name="back_button">back button</string>
    <string name="add_address">Add address</string>
    <string name="add_location_button">add location button</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
</resources>