<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.CartFragment">

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_bar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_gravity="end"
                app:fabSize="mini"
                app:elevation="0dp"
                android:scaleType="fitStart"
                app:tint="@null"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                style="?attr/floatingActionButtonSmallStyle"
                android:backgroundTint="@color/dark_blue"
                android:contentDescription="@string/back_button" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/add_address"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/mark_pro"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_white"
                app:fabSize="mini"
                app:elevation="0dp"
                app:tint="@null"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                style="?attr/floatingActionButtonSmallStyle"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/add_location_button"/>

        </LinearLayout>

        <TextView
            android:id="@+id/cart_label"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/my_cart"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/mark_pro_bold"
            android:textStyle="bold"
            android:textSize="32sp"/>


        <com.google.android.material.card.MaterialCardView
            app:layout_constraintTop_toBottomOf="@id/cart_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="24dp"
            android:background="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:layout_width="0dp"
            android:layout_height="0dp"

            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="48dp"
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/prices_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="0dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    android:overScrollMode="never"/>



                <RelativeLayout
                    android:id="@+id/prices_layout"
                    android:background="@drawable/background_stroke"
                    android:layout_width="match_parent"
                    app:layout_constraintBottom_toTopOf="@id/checkout_button"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="24dp"
                    android:layout_height="wrap_content"

                    >


                    <TextView
                        android:id="@+id/total_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/delivery_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_label"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/delivery"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/total_label"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="48dp"
                        android:fontFamily="@font/mark_pro_bold"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/delivery_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/delivery_label"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="48dp"
                        android:fontFamily="@font/mark_pro_bold"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/checkout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cornerRadius="8dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/checkout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/mark_pro_bold"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>






        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>